--- a/Complete-Strawberi.css
+++ b/Complete-Strawberi.css
@@ -1,17 +1,10 @@
-/*Strawberi CORE*/
-/*Create room on the screen*/
-#footbar {
-	display: none!important;
-}
-#content {
-	margin-bottom: 11vh;
-}
-.mq15 #content:has(#field_field[data-mode='public']) {
-	margin-bottom: 31vh;
-}
-
-/*Create the Buttons*/
-body>.dialog>div>div>div>div>button::before,
+/*🍓 Strawberi CORE Module*/
+/*make room on the screen for the 🍓 Buttons*/
+#footbar {display: none!important;}
+#content {margin-bottom: 11vh;}
+.mq15 #content:has(#field_field[data-mode='public']) {margin-bottom: 31vh;}
+/*create the 🍓 Buttons*/
+body>.dialog>div>div>div>div>button::before, /*DIALOG*/
 [href='/user/~clickback']::before, /*FIELD*/
 #field_nav button[data-action='next']::before,
 #field_berries a[data-berry]::before,
@@ -42,32 +35,25 @@ button#eggreload::before, /*LAB*/
 	cursor: pointer;
 	user-select: none;
 }
-/*Make the Field Strawberi Button taller on mobile*/
-.mq15 [href='/user/~clickback']::before, /*FIELD*/
+/*make the Field 🍓 Button taller than the others for convenience*/
+.mq15 [href='/user/~clickback']::before,
 .mq15 #field_nav button[data-action='next']::before,
 .mq15 #field_berries a[data-berry]::before,
 .mq15 .fieldmon.cormyr::before {
-    height: 30vh;
+   	height: 30vh;
 	line-height: 30vh;
 }
 
-/*Strawberi DIALOG Module*/
-.dialog {
-	margin-bottom: 10vw;
-}
-body>.dialog>div>div>div>div>button:first-of-type::before {
-	content: '🍓';
-}
-body>.dialog>div>div>div>div>button[data-cancelbutton='1']::before {
-	content: none!important;
-}
 
-/*Strawberi FIELDS Module*/
-/*(Based on Winterbraid's One Click Fields)*/
+/*🍓 Strawberi DIALOG Module*/
+.dialog {margin-bottom: 10vw;}
+body>.dialog>div>div>div>div>button:first-of-type::before {content: '🍓';}
+body>.dialog>div>div>div>div>button[data-cancelbutton='1']::before {content: none!important;}
+
+
+/*🍓 Strawberi FIELDS Module*/
 #core:has(#field_field[data-mode='public']):has([data-action='next'][disabled]) [href='/user/~clickback']::before,
-button[data-action='next']:not([disabled])::before {
-    content: '✅';
-}
+button[data-action='next']:not([disabled])::before,
 #content:has(.fieldmon[data-flavour^='any']:not(.nothungry)) a[data-berry='aspear']::before,
 #content:has(.fieldmon[data-flavour^='sour']:not(.nothungry)) a[data-berry='aspear']::before,
 #content:has(.fieldmon[data-flavour^='spicy']:not(.nothungry)) a[data-berry='cheri']::before,
@@ -79,28 +65,22 @@ button[data-action='next']:not([disabled])::before {
 #content:has(a.selected[data-berry='chesto']) .fieldmon.cormyr:not(.nothungry)::before,
 #content:has(a.selected[data-berry='pecha']) .fieldmon.cormyr:not(.nothungry)::before,
 #content:has(a.selected[data-berry='rawst']) .fieldmon.cormyr:not(.nothungry)::before {
-    content: '🍓';
+	content: '🍓';
 }
 #core:has(#field_field[data-mode='public']):has([data-action='next'][disabled]):has([data-action='jump'][disabled]) [href='/user/~clickback']::before,
 #core:has(#field_field[data-mode='public']):has([data-action='next'][disabled]):has(.fieldmon:not(.nothungry)) [href='/user/~clickback']::before,
 #content:has(#field_field[data-mode='private']) button[data-action='next']::before,
 #content:has(.fieldmon:not(.nothungry)) button[data-action='next']::before,
 #content:has(.fieldmon.cormyr:not(.nothungry)) a[data-berry]::before {
-    content: none!important;
-}
-#field_berries.selected > div > a > img {
-    opacity: 0.5;
-}
-#field_berries.selected > div > a,
-#field_berries.selected > div > a.selected > img {
-    opacity: 1;
+	content: none!important;
 }
 
-/*Strawberi PARTY SCOUR Module*/
+
+/*🍓 Strawberi PARTY SCOUR Module*/
 .mu_navlink.next::before,
 .mu_navlink.next.qolGetMore::before {
-	content: '✅';
-	z-index: 1!important;
+	content: '🍓';
+	z-index: 1!important; /*must load below all of the other button instances*/
 }
 .showcase>div>.action>.berrybuttons[data-down='any']>[data-berry='oran']::before,
 .showcase>div>.action>.berrybuttons[data-up='sour']>[data-berry='aspear']::before,
@@ -118,7 +98,8 @@ button[data-action='next']:not([disabled])::before {
 	content: '🍓';
 }
 
-/*Strawberi FISHING Module*/
+
+/*🍓 Strawberi FISHING Module*/
 a[data-fishspot='0']::before,
 button[data-battleend]::before,
 button[data-battleact='ball-624']::before,
@@ -126,22 +107,19 @@ button[data-battleact='ball-623']::before,
 button[data-battleact='ball-597']::before {
 	content: '🍓';
 }
-#fishing>.panel>.center>p>button::before {
-	content: '🌊';
-}
-#fishing>.panel>.center>p>button.shake::before {
-	content: '🎣';
-}
+#fishing>.panel>.center>p>button::before {content: '🌊';}
+#fishing>.panel>.center>p>button.shake::before {content: '🎣';}
+/*throw the cheapest Fishing Ball first*/
 #fishing:has([data-battleact="ball-597"]) button[data-battleact='ball-624']::before,
 #fishing:has([data-battleact="ball-597"]) button[data-battleact='ball-623']::before,
 #fishing:has([data-battleact="ball-623"]) button[data-battleact='ball-624']::before {
 	content: none!important;
 }
 
-/*Strawberi BOXES Module*/
-.boxlist>.panel>div>p>button[data-open]:not([disabled])::before {
-	content: '🎁';
-}
+
+/*🍓 Strawberi BOXES Module*/
+.boxlist>.panel>div>p>button[data-open]:not([disabled])::before {content: '🎁';}
+/*don't accidentally open any boxes of a higher tier*/
 .boxlist>.panel>div>p>button[data-open='boxbox']::before,
 .boxlist>.panel>div>p>button[data-open='boxboxbox']::before,
 .boxlist>.panel>div>p>button[data-open='gragonbox']::before,
@@ -149,27 +127,17 @@ button[data-battleact='ball-597']::before {
 	content: none!important;
 }
 
-/*Strawberi EVOLUTION Module*/
+/*🍓 Strawberi EVOLUTION Module*/
 /*This code REQUIRES QOL to be enabled.*/
-.autoevo>a::before {
-	content: '✨';
-}
-#farmnews-evolutions>p>label>input:not(:checked) .autoevo>a::before {
-	content: none!important;
-}
+.autoevo>a::before {content: '✨';}
+#farmnews-evolutions>p>label>input:not(:checked) .autoevo>a::before {content: none!important;}
 
-/*Strawberi TRADE Module*/
-.tradelist>li>a.view::before {
-	content: '🍓';
-}
-button.big[data-action='acceptgift']::before {
-	content: '🤝';
-}
 
-/*Strawberi LAB Module*/
-button#eggreload:enabled::before {
-	content: '🔄';
-}
-#orusereloader>span>button:not([disabled])::before {
-	content: '⏭️';
-}
+/*🍓 Strawberi TRADE Module*/
+.tradelist>li>a.view::before {content: '🍓';}
+button.big[data-action='acceptgift']::before {content: '🤝';}
+
+
+/*🍓 Strawberi LAB Module*/
+button#eggreload:enabled::before {content: '🔄';}
+#orusereloader>span>button:not([disabled])::before {content: '⏭️';}
