--- a/Strawberi-Skin.css
+++ b/Strawberi-Skin.css
@@ -34,30 +34,30 @@ body {
   * var(--bordercontent) would determine box-shadow color, but we turned that off.
   */
   --background-image: url("https://pokefarm.com/upload/:JPM4/D_lmenKirchspielErdbeerfeld2015.jpg");
-  --global: #ff7d7d;
-  --content: #d8ffcd;
+  --global: #ff6363;
+  --content: #ecffcd;
   --text: #2f2000;
-  --title: #acf2a0;
+  --title: #d1f995;
   --titletext: #2f2000;
-  --link: #e32b00;
-  --visitedlink: #cb9200;
-  --activelink: #00a2d0;
+  --link: #e3003f;
+  --visitedlink: #e87900;
+  --activelink: #00a0eb;
 
   /*Extra CSS tab.*/
   --borderglobal: #850000;
   --bordertitle: #de0000;
   --bordercontent: #de0000;
-  --liked: #2cff8b;
-  --disliked: #aa4444;
+  --liked: #7fff00;
+  --disliked: #af2727;
 
   /*Custom variables from here on out.*/
-  --navbtns: #ff7d7d;
-  --navbtnsborder: #b63d3d;
-  --navbookmark: #ff8b7f;
-  --navbookmarkborder: #ac473c;
-  --announce: #ff9a7f;
-  --announceborder: #ab523b;
-  --announcehover: #ffbb90;
+  --navbtns: #ff6363;
+  --navbtnsborder: #a71212;
+  --navbookmark: #ff7d63;
+  --navbookmarkborder: #a42911;
+  --announce: #ff9063;
+  --announceborder: #a23b11;
+  --announcehover: #ffb363;
 }
 
 * {
@@ -75,11 +75,15 @@ body {
 \*---------------🍓---------------*/
 
 #header {
-  background-color:    rgba(216, 255, 205, 0.9);
+  background-color:    rgba(209, 249, 149, 0.9);
   border-bottom: 0;
 }
 .mq15 #header {
-  background-color:    var(--content)!important;
+  background-color:    var(--title)!important;
+}
+
+#notifs>a::after {
+  background-color:    var(--navbookmark)!important;
 }
 
 /*Removes the tray effect on smaller screen sizes.*/
@@ -92,7 +96,7 @@ body {
 
 /*Gives page headers and links a background for visibility.*/
 h1, p>a {
-  background-color:    rgba(216, 255, 205, 0.9);
+  background-color:    rgba(209, 249, 149, 0.9);
   border-radius:       5px;
 }
 
@@ -102,11 +106,11 @@ h1, p>a {
 
 #navigation {
   margin-top: 0px; padding-top: 5px;
-  background-color:    rgba(216, 255, 205, 0.9);
+  background-color:    rgba(209, 249, 149, 0.9);
   border: 0;
 }
 .mq15 #navigation, {
-  background-color:    var(--content)!important;
+  background-color:    var(--title)!important;
 }
 
 
@@ -126,6 +130,7 @@ h1, p>a {
   line-height: 14px;
 }
 .mq15 #navigation>#navbtns>li>a {
+  padding-top: 0;
   line-height: 8px;
 }
 
@@ -135,8 +140,8 @@ h1, p>a {
   top:    -1px;
   left:   -5px;
   border-color:        transparent;
-  border-top-color:    darkgreen;
-  border-left-color:   darkgreen;
+  border-top-color:    #165000;
+  border-left-color:   #165000;
   border-width: 10px;
   border-style: dotted;
   content:'';
@@ -145,7 +150,7 @@ h1, p>a {
   position:absolute;
   top:    -3px;
   left:   -3px;
-  border-color:        limegreen;
+  border-color:        #62c400;
   border-bottom-color: transparent;
   border-right-color:  transparent;
   border-width: 10px;
@@ -179,8 +184,8 @@ h1, p>a {
   bottom: -5px;
   left:   -5px;
   border-color:        transparent;
-  border-bottom-color: darkgreen;
-  border-left-color:   darkgreen;
+  border-bottom-color: #165000;
+  border-left-color:   #165000;
   border-width: 10px;
   border-style: dotted;
   content: "";
@@ -189,7 +194,7 @@ h1, p>a {
   position:absolute;
   bottom: -3px;
   left:   -3px;
-  border-color:        limegreen;
+  border-color:        #62c400;
   border-top-color:    transparent;
   border-right-color:  transparent;
   border-width: 10px;
@@ -207,13 +212,13 @@ h1, p>a {
 
 #announcements {
   padding: 4px 4px 0;
-  background-color:   rgba(216, 255, 205, 0.9);
+  background-color:   rgba(209, 249, 149, 0.9);
   border-bottom: 0;
   border-bottom-left-radius:  5px;
   border-bottom-right-radius: 5px;
 }
 .mq15 #announcements {
-  background-color:   var(--content)!important;
+  background-color:   var(--title)!important;
 }
 
 
@@ -244,7 +249,7 @@ h1, p>a {
 }
 .mq15 #counters {
   height: 75px;
-  background-color:   var(--content)!important;
+  background-color:   var(--title)!important;
 }
 
 #counters>#dailybonus{
@@ -270,7 +275,7 @@ h1, p>a {
 .forumpost, 
 .tooltip_content,
 div[data-pid] {
-  background-color:   rgba(216, 255, 205, 0.9);
+  background-color:   rgba(209, 249, 149, 0.9);
 }
 
 #sheltersuccess,
