updated the background image license

--- a/Strawberi-Skin.css
+++ b/Strawberi-Skin.css
@@ -3,8 +3,8 @@
 \*---------------🍓---------------*/
 
 /**
-* Background credit: Wikimedia Commons / “Dülmen, Kirchspiel, Erdbeerfeld -- 2015 -- 6492-6” 
-* CC BY-SA 4.0 Dietmar Rabich https://creativecommons.org/licenses/by-sa/4.0/ 
+* Background credit: Dietmar Rabich / Wikimedia Commons / “Dülmen, Kirchspiel, Erdbeerfeld -- 2015 -- 6492-6”
+* CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0/
 *
 * We use a lot of variables here, covering basically every color being used.
 * This makes it easier to edit colors on the fly, or customize the theme for yourself.
